# jelly

./: .gitignore  CMakeList.old.txt  CMakeLists.txt  Config.cmake.in  JellyConfig.cmake.in  JellyConfigVersion.cmake.in  LICENSE  README.md  vcpkg.json
jelly/: CMakeLists.txt  Jelly.cpp
jelly/graphics/: Color.h  GLSLProgram.cpp  GLSLProgram.h  Sprite.cpp  SpriteBatch.cpp  SpriteBatch.h  TextureCache.cpp  Vertex.h  Window.cpp  Window.h
jelly/input/: InputManager.cpp  InputManager.h
jelly/src/: Jelly.cpp
jelly/src/graphics/: Camera2D.cpp  Camera2D.h  GLSLProgram.cpp  Sprite.cpp  TextureCache.cpp  TextureCache.h  Window.cpp
jelly/src/utils/: IOManager.cpp  ImageLoader.cpp  ImageLoader.h  Logger.cpp  Logger.h  Palette.h  ResourceManager.h
jelly/utils/: ImageLoader.cpp  ImageLoader.h  Palette.cpp  ResourceManager.h
jelly_example/: CMakeLists.txt
jelly_example/shaders/: basic.frag.glsl  basic.vert.glsl
jelly_example/src/: main.cpp
jelly_example/src/core/: Engine.cpp  Engine.h
src/: Jelly.cpp  Jelly.h
src/graphics/: GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  Sprite.cpp  Sprite.h  TextureCache.cpp  TextureCache.h  Vertex.h  Window.cpp  Window.h
src/utils/: IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  Logger.cpp  Logger.h  Palette.cpp  Palette.h  ResourceManager.cpp  ResourceManager.h
src/vendors/: picoPNG.h
